--- a/css/style.css
+++ b/css/style.css
@@ -1672,7 +1672,6 @@ span {
   outline: none;
   background: none;
 }
-
 #contact .contact-item::before {
   position: absolute;
   content: '';
@@ -1926,7 +1925,8 @@ span {
 }
 
 #footer .brand {
-  padding: .3em;
+  width: 80%;
+  padding: .3em .5em;
   margin: .5em;
   overflow: hidden;
   border-radius: 10px;
@@ -1976,9 +1976,10 @@ span {
   position: relative;
   padding: .3em;
   color: #fff;
+  text-align: center;
   /* font-size: clamp(1rem, 3vw + 1rem, 4rem); */
   font-size: 1.5em;
-  width: max-content;
+  /* width: max-content; */
 }
 
 #footer .brand h3::before,
@@ -1990,7 +1991,7 @@ span {
   left: 0;
   padding: .3em;
   font-family: 'Font Awesome 5 Free';
-  transition: 3s ease;
+  transition: 2.5s ease;
   border-radius: 5px;
 }
 
@@ -2263,7 +2264,7 @@ span {
   position: absolute;
   bottom: -120%;
   left: 0;
-  font-size: .7em;
+  font-size: .5em;
   color: #ddd;
   width: 100%;
   height: 100%;
@@ -2273,8 +2274,8 @@ span {
 }
 /* freecodecamp icon::before needs additional styling to fit in .social-icon div */
 #footer .social-item:nth-child(3) a::before {
-  font-size: .6em;
-  bottom: -100%;
+  font-size: .5em;
+  bottom: -120%;
   left: -1em;
   transform: translateY(100%);
 
@@ -2631,7 +2632,9 @@ span {
   #contact .contact-info h2 {
     font-size: .8em;
   }
-
+  #footer .brand {
+    width: 40%;
+  }
 }
 
 /*End of Contact*/
