--- a/css/style.css
+++ b/css/style.css
@@ -54,10 +54,12 @@
     inset -5px -5px 15px #000;
 
   --contact-shadow: inset 5px 5px 10px #ddda,
-    inset -5px -5px 10px #000a;
+                    inset -5px -5px 10px #000a
+                    ;
 
   --contact-shadow-hover: inset 5px 5px 10px #000a,
-    inset -5px -5px 10px #ddda;
+                          inset -5px -5px 10px #ddda
+                          ;
 
   --bg-color: hsl(49 37% 94%);
   --typeWriterSpeed: 6s;
@@ -722,7 +724,114 @@ span {
   background: #fff;
   z-index: 30;
 }
+/*Dropdown*/
+/* Dropdown Button */
+.dropbtn {
+  color: #eee;
+  padding: .3em 3em;
+  font-size: 1.5em;
+  font-weight: 600;
+  cursor: pointer;
+  border: none;
+  outline: none;
+  border-radius: 10px;
+  background: linear-gradient(0deg, #dc134c, #333);
+  text-align: center;
+  transition: .3s;
+  font-family: 'Gruppo', cursive;
+  position: relative;
+  overflow: hidden;
 
+}
+
+.dropbtn::before {
+  content: '';
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  border-radius: 10px;
+  transition: .5s;
+  box-shadow: 5px 10px 5px #000,
+              inset 3px 3px 5px #000a,
+              inset -3px -3px 5px #fffa;
+}
+
+.dropbtn::after {
+  position: absolute;
+  content: '';
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  opacity: 0;
+  border-radius: 10px;
+  transition: .5s;
+  box-shadow: 0px 0px 10px #000a,
+    inset 3px 3px 5px #fffa,
+    inset -3px -3px 5px #000a;
+}
+
+.dropbtn:hover.dropbtn::after {
+  opacity: 1;
+}
+
+.dropbtn:hover.dropbtn::before {
+  opacity: 0;
+}
+
+/* Dropdown button on hover & focus */
+.dropbtn:hover,
+.dropbtn:focus {
+  transition: .2s ease;
+}
+.dropbtn:active {
+  transform: scale(.9);
+  transition: .3s;
+
+}
+/* The container <div> - needed to position the dropdown content */
+.dropdown {
+  position: relative;
+  margin: 0 auto;
+  z-index: 4;
+}
+
+
+
+/* Dropdown Content (Hidden by Default) */
+.dropdown-content {
+  display: none;
+  width: 100vw;
+  z-index: 1;
+  justify-content: center;
+  align-items: center;
+  background-image: url('../img/nadine-shaabana-0xD40qm07X0-unsplash.jpg');
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  background-attachment: fixed;
+  position: relative;
+  padding-bottom: 10em;
+}
+
+.dropdown-content::before {
+  content: "";
+  position: absolute;
+  left: 0;
+  top: 0;
+  height: 100%;
+  width: 100%;
+  background:#000a;
+}
+
+/* Show the dropdown menu (use JS to add this class to the .dropdown-content container when the user clicks on the dropdown button) */
+.show {
+  display: block;
+}
+
+/*end of Dropdown*/
 #skills .skills-top {
   width: 90%;
   padding: .5em .5em 2em .5em;
@@ -927,114 +1036,7 @@ span {
   border-radius: 30px;
 }
 
-/*Dropdown*/
-/* Dropdown Button */
-.dropbtn {
-  color: #eee;
-  padding: .3em 3em;
-  font-size: 1.5em;
-  font-weight: 600;
-  cursor: pointer;
-  border: none;
-  outline: none;
-  border-radius: 10px;
-  background: linear-gradient(0deg, #dc134c, #333);
-  text-align: center;
-  transition: .3s;
-  font-family: 'Gruppo', cursive;
-  position: relative;
-  overflow: hidden;
 
-}
-
-.dropbtn::before {
-  content: '';
-  position: absolute;
-  bottom: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  border-radius: 10px;
-  transition: .5s;
-  box-shadow: 5px 10px 5px #000,
-              inset 3px 3px 5px #000a,
-              inset -3px -3px 5px #fffa;
-}
-
-.dropbtn::after {
-  position: absolute;
-  content: '';
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  opacity: 0;
-  border-radius: 10px;
-  transition: .5s;
-  box-shadow: 0px 0px 10px #000a,
-    inset 3px 3px 5px #fffa,
-    inset -3px -3px 5px #000a;
-}
-
-.dropbtn:hover.dropbtn::after {
-  opacity: 1;
-}
-
-.dropbtn:hover.dropbtn::before {
-  opacity: 0;
-}
-
-/* Dropdown button on hover & focus */
-.dropbtn:hover,
-.dropbtn:focus {
-  transition: .2s ease;
-}
-.dropbtn:active {
-  transform: scale(.9);
-  transition: .3s;
-
-}
-/* The container <div> - needed to position the dropdown content */
-.dropdown {
-  position: relative;
-  margin: 0 auto;
-  z-index: 4;
-}
-
-
-
-/* Dropdown Content (Hidden by Default) */
-.dropdown-content {
-  display: none;
-  width: 100vw;
-  z-index: 1;
-  justify-content: center;
-  align-items: center;
-  background-image: url('../img/nadine-shaabana-0xD40qm07X0-unsplash.jpg');
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-position: center;
-  background-attachment: fixed;
-  position: relative;
-  padding-bottom: 10em;
-}
-
-.dropdown-content::before {
-  content: "";
-  position: absolute;
-  left: 0;
-  top: 0;
-  height: 100%;
-  width: 100%;
-  background:#000a;
-}
-
-/* Show the dropdown menu (use JS to add this class to the .dropdown-content container when the user clicks on the dropdown button) */
-.show {
-  display: block;
-}
-
-/*end of Dropdown*/
 
 /*End of Skills Section*/
 
@@ -1148,8 +1150,27 @@ span {
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
 }
-
-
+/* project-details card */
+#projects .project-details {
+  background: #333;
+  padding: .4em;
+  position: relative;
+  border: none;
+  outline: none;
+}
+/* projects detail card box shadow */
+#projects .project-details::before {
+  position: absolute;
+  content: '';
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  border-radius: 5px;
+  box-shadow: inset 2px 2px 4px #fffa,
+              inset -2px -2px 4px #000a;
+}
+/* projects detail card box shadow */
 
 #projects .project-tile h2 {
   font-size: 1em;
@@ -1157,24 +1178,24 @@ span {
   font-weight: 500;
   margin: .5em 0;
   text-transform: capitalize;
+  color: #fff;
 }
 
 #projects .project-tile p {
   font-size: .8em;
   font-weight: 200;
-  color: #fff;
+  color: #ddd;
   margin: .5em 0;
 }
-
+/* project site link */
 #projects .project-tile a {
   color: #fff;
   background: #333;
-  animation: project-link 2s linear infinite;
-
+  margin: .4em 0;
+  padding: .5em;
+  border: none;
+  outline: none;
   border-radius: 5px;
-  margin: 5px auto;
-  /* margin-top: 5px; */
-  padding: 10px;
   transition: all .3s ease;
   position: relative;
 }
@@ -1187,13 +1208,10 @@ span {
   width: 100%;
   height: 100%;
   border-radius: 5px;
-  box-shadow: inset 3px 3px 5px #ddda,
-    inset -3px -3px 5px #000a;
+  box-shadow: inset 2px 2px 3px #ddda,
+    inset -2px -2px 5px #000a;
 }
 
-@keyframes project-link {
-  50% {}
-}
 
 #projects .project-tile a:hover {
   color: #aef50a;
@@ -1205,13 +1223,12 @@ span {
 
 #projects .project-tile a i {
   color: #aef50a;
-  font-size: .8em;
+  font-size: .7em;
   padding: .2em;
 }
 
 #projects .project-tile a i::after {
   content: 'view project';
-  font-size: 1em;
   font-family: 'Gruppo', cursive;
   font-style: italic;
 
@@ -1220,16 +1237,18 @@ span {
 #projects .project-tile a:hover i {
   transition: 1s ease;
 }
+/* end of project site link */
 
+/* end of project-details card */
+/* project image */
 #projects .project-img {
   flex-basis: 50%;
   width: 100%;
-  height: 300px;
+  height: 100%;
   overflow: hidden;
   position: relative;
-  padding: 1em;
 }
-
+/* project-image box shadow*/
 #projects .project-img::after {
   content: "";
   position: absolute;
@@ -1244,13 +1263,12 @@ span {
   background-image: linear-gradient(60deg, #29323c, 0%, #585563 100%);
   opacity: 0.5;
 }
+/* end of project-image box shadow*/
 
 #projects .project-img img {
-
   height: 100%;
   width: 100%;
   object-fit: cover;
-  transform: scale(.999);
 
 
   border-radius: 0px;
@@ -1258,7 +1276,7 @@ span {
   border-top-right-radius: 5px;
 
 }
-
+/* tech list */
 .tech-list {
   padding: .5em;
 }
@@ -1271,9 +1289,12 @@ span {
   font-size: .7em;
   color: #adf51d;
   list-style: none;
-  padding: .4em;
+  padding: .4em .3em;
+  margin-right: .1em;
   font-style: italic;
+  letter-spacing: .05em;
 }
+/* end of tech list */
 
 /*image transition on hover*/
 #projects .project-img img {
@@ -1293,9 +1314,7 @@ span {
   text-align: center;
   margin: 0 auto;
   padding: 50px 10px 100px 10px;
-
   background-image: url('../img/pexels-magda-ehlers-2660262.jpg');
-
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
@@ -1314,7 +1333,14 @@ span {
   opacity: 0.6;
   overflow: hidden;
 }
+/* about section title */
+#about .col-right .section-title:after {
+  width: 80%;
+  margin: 0 auto;
+}
+/* about section title */
 
+/* about me content */
 #about .col-right {
   width: 93%;
   margin-right: 30px;
@@ -1324,7 +1350,6 @@ span {
   border-radius: 5px;
   position: relative;
   /* border: 1px solid #dc143c; */
-
 }
 
 #about .col-right::after {
@@ -1340,10 +1365,6 @@ span {
     inset -5px -5px 5px #000a;
 }
 
-#about .col-right .section-title:after {
-  width: 80%;
-  margin: 0 auto;
-}
 
 #about .col-right .about-title {
   display: flex;
@@ -1463,7 +1484,8 @@ span {
   cursor: pointer;
   padding: .5em;
 }
-
+/* end of about me content */
+/* about me image */
 #about .col-left {
   width: 100%;
   height: 360px;
@@ -1543,8 +1565,9 @@ span {
   transform-style: preserve-3d;
   transform: scale(1);
 }
-
 /* end of about image  */
+
+/* end of about me image */
 
 .fcc-link {
   color: #dc143c;
@@ -1553,7 +1576,7 @@ span {
 .fcc-link:hover {
   color: violet;
 }
-
+/* cv links */
 #cv {
   display: flex;
   justify-content: space-between;
@@ -1612,7 +1635,7 @@ span {
     box-shadow: 15px 15px 10px #26262671;
   }
 }
-
+/* end of cv links */
 
 /*end of About Section*/
 
@@ -1655,14 +1678,14 @@ span {
 #contact .contact-items {
   width: 100%;
 }
-
+/* contact item card general style */
 #contact .contact-item {
   width: 85%;
   /* height: auto; */
   text-align: center;
   border-radius: 10px;
   padding: .5em;
-  margin: .5em auto;
+  margin: 1em auto;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -1674,7 +1697,10 @@ span {
   border: none;
   outline: none;
   background: none;
+  backdrop-filter: blur(.1em);
+  -webkit-backdrop-filter: blur(.1em);
 }
+/* contact item box shadows */
 #contact .contact-item::before {
   position: absolute;
   content: '';
@@ -1700,8 +1726,6 @@ span {
   width: 100%;
   height: 100%;
   box-shadow: var(--contact-shadow);
-  backdrop-filter: blur(.15em);
-  -webkit-backdrop-filter: blur(.15em);
   border-radius: 10px;
   z-index: -2;
   opacity: 0;
@@ -1711,12 +1735,14 @@ span {
 #contact .contact-item:hover.contact-item::after {
   opacity: 1;
 }
+/* end of contact item box shadows */
 
 #contact .contact-item:hover {
   transform: scale(.96);
   transition: .5s ease;
   transform: preserve-3d;
 }
+/* end of contact item card general style */
 /* contact item heading */
 #contact .contact-item h1 {
   background-image: linear-gradient(50deg, skyblue, #dc1489, skyblue, #dc1489, skyblue);
@@ -1748,6 +1774,8 @@ span {
   left: 0;
   width: 100%;
   height: 100%;
+  background: #f4f4f4;
+  z-index: -1;
   border-radius: 10px;
   transition: .3s ease;
 }
@@ -1777,12 +1805,14 @@ span {
   margin: 5px auto 10px auto;
   padding: .3em .7em;
   border-radius: 10px;
+  border: none;
+  outline: none;
   position: relative;
   display: grid;
   place-items: center;
   transition: .5s ease;
 }
-
+/* contact icon box shadows and transitions */
 #contact .icon::before {
   position: absolute;
   content: '';
@@ -1791,7 +1821,7 @@ span {
   width: 100%;
   height: 100%;
   background: #f4f4f4;
-  border-radius: 10px;
+  border-radius: 50%;
   box-shadow: var(--contact-shadow-hover);
   transition: 1s ease;
   transform: preserve-3d;
@@ -1834,6 +1864,7 @@ span {
   transform: scale(1);
   transform: preserve-3d;
 }
+/* end of contact icon box shadows and transitions */
 
 /* end of contact icon */
 
@@ -1844,6 +1875,8 @@ span {
   font-weight: 600;
   letter-spacing: .1em;
   padding: .2em 1em;
+  border: none;
+  outline: none;
   border-radius: 10px;
   margin: .5em auto;
   color: #000a;
@@ -1852,7 +1885,7 @@ span {
 }
 
 #contact .contact-item:hover h2 {
-  transform: scaleX(1.12)
+  transform: scaleX(1.1)
 }
 
 #contact .contact-info h2::before {
@@ -1891,13 +1924,13 @@ span {
 #contact .contact-item:hover.contact-item h2::after {
   opacity: 1;
 }
-/* contact-info form link */
+/* contact-info form link (get in touch) */
 #contact .contact-info a {
-
   font-size: 1em;
   line-height: 2rem;
+  display: inline-block;
   letter-spacing: .1em;
-  padding: .3em 1em;
+  padding: .2em .5em;
   border-radius: 10px;
   margin: .7em auto;
   background-color: #b60f30;
@@ -1910,6 +1943,14 @@ span {
 }
 #contact .contact-item:hover .contact-info a {
   opacity: 1;
+}
+#contact .contact-info a:hover {
+  transform: scale(.95);
+  transition: .2s;
+}
+#contact .contact-info a:active {
+  transform: scale(.9);
+  transition: .2s;
 }
 /* end of contact-info form link */
 /* contact-info details */
