--- a/css/style.css
+++ b/css/style.css
@@ -479,8 +479,9 @@ span {
   /* background-repeat: no-repeat; */
   /* background-size: 310%; */
   /* background-position: left; */
-  /* background-attachment: fixed;  */
-  background-image: linear-gradient(0deg, #29323c 60%, #485563 70% );
+  background-attachment: fixed; 
+  /* background-image: linear-gradient(0deg, #29323c 60%, #485563 70% ); */
+  background-image: linear-gradient(0deg, #485563, #29323c 60%  );
   position: relative;
   /*to allow overlay of this section*/
   z-index: 1;
