--- a/css/style.css
+++ b/css/style.css
@@ -479,9 +479,10 @@ span {
   /* background-repeat: no-repeat; */
   /* background-size: 310%; */
   /* background-position: left; */
-  background-attachment: fixed; 
+  /* background-attachment: fixed;  */
   /* background-image: linear-gradient(0deg, #29323c 60%, #485563 70% ); */
-  background-image: linear-gradient(0deg, #485563, #29323c 60%  );
+  /* background-image: linear-gradient(0deg, #485563, #29323c 60%  ); */
+  background-color: #29323c;
   position: relative;
   /*to allow overlay of this section*/
   z-index: 1;
