--- a/forms/form.scss
+++ b/forms/form.scss
@@ -106,9 +106,10 @@
                         textarea {
                             padding: .5em;
                             margin: .5em auto;
+                            font-weight: 700;
 
                             &::placeholder {
-                                color: #333;
+                                color: #333a;
                             }
                         }
                         .btns {
@@ -121,6 +122,9 @@
                     .service-info {
                         text-align: left;
                         font-size: 1em;
+                        p {
+                            font-weight: 700;
+                        }
                     }
 
                     .title {
@@ -158,7 +162,7 @@
                             top: -30px;
                             font-weight: 800;
                             color: #dc143c;
-                            font-size: 1em;
+                            font-size: .9em;
                             text-transform: capitalize;
                         }
 
