--- a/css/form.css
+++ b/css/form.css
@@ -80,8 +80,12 @@
             .welcome-section .form-container .form-outer form .page#message-page textarea {
               padding: .5em;
               margin: .5em auto;
-              font-weight: 700; }
+              font-size: 1em;
+              font-family: 'Poppins', sans-serif; }
               .welcome-section .form-container .form-outer form .page#message-page textarea::placeholder {
+                font-weight: 700;
+                font-family: 'Gruppo', cursive;
+                font-size: .9em;
                 color: #333a; }
             .welcome-section .form-container .form-outer form .page#message-page .btns {
               position: absolute;
