--- a/css/form.css
+++ b/css/form.css
@@ -93,12 +93,11 @@
               left: 0; }
           .welcome-section .form-container .form-outer form .page .service-info {
             text-align: left;
-            font-size: 1em; }
+            font-size: .9em; }
             .welcome-section .form-container .form-outer form .page .service-info p {
               font-weight: 700; }
           .welcome-section .form-container .form-outer form .page .title {
-            text-align: left;
-            font-size: 1.9em;
+            font-size: 1.5em;
             font-weight: 900; }
             .welcome-section .form-container .form-outer form .page .title h3 {
               text-align: center;
@@ -175,7 +174,7 @@
                 box-shadow: inset 2px 2px 4px #ddda, inset -2px -2px 4px #41061298; }
             .welcome-section .form-container .form-outer form .page .field button {
               width: 100%;
-              height: calc(100% + 5px);
+              height: 100%;
               border: none;
               margin-top: -20px;
               border-radius: 5px;
@@ -220,7 +219,7 @@
             margin-top: -20px !important; }
             .welcome-section .form-container .form-outer form .page .btns button.prev {
               margin-right: 3px;
-              font-size: 17px;
+              font-size: .8em;
               color: #ddda; }
               .welcome-section .form-container .form-outer form .page .btns button.prev::before {
                 background: #70081d; }
