--- a/forms/form.scss
+++ b/forms/form.scss
@@ -126,15 +126,15 @@
                     }
                     .service-info {
                         text-align: left;
-                        font-size: 1em;
+                        font-size: .9em;
                         p {
                             font-weight: 700;
                         }
                     }
 
                     .title {
-                        text-align: left;
-                        font-size: 1.9em;
+                        // text-align: left;
+                        font-size: 1.5em;
                         font-weight: 900;
                         
                         h3 {
@@ -247,7 +247,8 @@
 
                         button {
                             width: 100%;
-                            height: calc(100% + 5px);
+                            // height: calc(100% + 5px);
+                            height: 100%;
                             border: none;
                             margin-top: -20px;
                             border-radius: 5px;
@@ -304,7 +305,7 @@
                             margin-top: -20px !important;
                             &.prev {
                                 margin-right: 3px;
-                                font-size: 17px;
+                                font-size: .8em;
                                 color: #ddda;
                                 &::before {
                                     background: #70081d;
