--- a/css/style.css
+++ b/css/style.css
@@ -306,7 +306,7 @@ span {
 
 #header .nav-list ul li:hover .scroll-li {
   transition: .3s;
-  color: crimson;
+  color: rgb(245, 118, 143);
 }
 
 
@@ -322,7 +322,7 @@ span {
 }
 #header .nav-list ul li a {
   font-size: 1em;
-  font-weight: 500;
+  font-weight: 600;
   letter-spacing: .15em;
   text-decoration: none;
   color: #fff;
@@ -330,6 +330,7 @@ span {
   padding: 20px;
   display: block;
   text-align: left;
+  font-family: 'Gruppo', cursive;
   transition: .2s ease-in-out;
 }
 
@@ -2341,6 +2342,7 @@ span {
 
 #footer p,
 #date {
+  font-family: 'Gruppo', cursive;
   color: #f4f4f4;
   font-size: 1em;
   text-transform: capitalize;
