--- a/_utilities.scss
+++ b/_utilities.scss
@@ -16,19 +16,19 @@
 /*end of progress bar*/
 
 // container 
-.container {
-    min-height: 100vh;
-    width: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    overflow: hidden;
-}
+// .container {
+// min-height: 100vh;
+//     width: 100%;
+//     display: flex;
+//     align-items: center;
+//     justify-content: center;
+//     overflow: hidden;
+// }
 // end of container 
 
 // section-title
 .section-title {
-    font-size: .2em;
+    font-size: 2.3em;
     font-weight: 500;
     max-width: 100vw;
     color: #000;
