--- a/style2.scss
+++ b/style2.scss
@@ -13,22 +13,91 @@ body {
 }
 
 // header
+#header {
+    position: fixed;
+    z-index: 1000;
+    left: 0;
+    top: 0;
+    width: 100vw;
+
+    .header {
+        min-height: 8vh;
+        // height: 10vh;
+        background-color: #1f1e1e80;
+        transition: 0.3s ease background-color;
+
+        #navbar {
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+            width: 100%;
+            height: 100%;
+            max-width: 1300px;
+            padding: 0 10px;
+            // corner logo
+            .brand {
+                h1 {
+                    font-size: 1.3em;
+                    text-transform: uppercase;
+                    color: #fff;
+                    font-family: 'Gruppo', cursive;
+                    text-shadow: 0 0 10px #dc143c;
+                }
+            }
+            // corner logo
+
+            .nav-list {
+                // desktop nav-list style
+                @media (min-width: 1024px){
+                    ul {
+                        position: initial;
+                        display: block;
+                        height: auto;
+                        width: fit-content;
+                        background-color: transparent;
+
+                        li {
+                            display: inline-block;
+
+                            a {
+                                font-size: .9em;
+                                padding: .3em 1em;
+                                margin: 0 auto;
+
+                                i {
+                                    margin-right: .3em;
+                                    padding: .5em;
+                                    font-size: 1em;
+                                    border-radius: 50%;
+                                }
+
+                                &::after {
+                                    display: none;
+                                }
+                            }
+                        }
+                        &.active {
+                            background: none;
+                            box-shadow: none;
+                        }
+                    }
+
+                    .hamburger {
+                        display: none;
+                    }
+                }
+                // desktop nav-list style
+            }
+        }
+    }
+}
 // end of header
 
 // hero section
 // end of hero section
 
 // skills
-// end of skills
 
 // projects 
-// end of projects 
 
 // about 
-// end of about 
-
-// contact
-// end of contact
-
-// footer
-// end of footer
