--- a/css/style2.css
+++ b/css/style2.css
@@ -117,6 +117,46 @@ body {
         color: #fff;
         font-family: 'Gruppo', cursive;
         text-shadow: 0 0 10px #dc143c; }
+      @media (min-width: 768px) {
+        #header .header #navbar .nav-list .links-container .nav-avi {
+          display: none; } }
+      #header .header #navbar .nav-list .links-container .nav-avi {
+        height: 5em;
+        width: 5em;
+        border-radius: 50%;
+        overflow: hidden;
+        position: absolute;
+        top: 1em;
+        left: 1em;
+        cursor: pointer; }
+        @media (max-width: 360px) {
+          #header .header #navbar .nav-list .links-container .nav-avi {
+            height: 4em;
+            width: 4em; } }
+        #header .header #navbar .nav-list .links-container .nav-avi img {
+          width: 100%;
+          height: 100%;
+          object-fit: cover;
+          transition: .5s;
+          /* pointer-events: none; */ }
+      #header .header #navbar .nav-list ul {
+        list-style: none;
+        position: absolute;
+        background: #1f1e1e;
+        width: 100vw;
+        height: 100vh;
+        left: 100%;
+        top: 0;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: right;
+        z-index: 1;
+        overflow-x: hidden;
+        transition: 0.5s ease left; }
+        #header .header #navbar .nav-list ul.active {
+          left: 20%;
+          background-color: #29323c; }
       @media (min-width: 1024px) {
         #header .header #navbar .nav-list ul {
           position: initial;
