--- a/style2.scss
+++ b/style2.scss
@@ -47,6 +47,63 @@ body {
             // corner logo
 
             .nav-list {
+                .links-container {
+                    // hide nav avi on desktop
+                    @media (min-width:768px) {
+                        .nav-avi { display: none;}
+                    }
+                    // end of hide nav avi on desktop
+                    // nav avi < 768px
+                    .nav-avi {
+                        // nav avi on small screens
+                        @media (max-width: 360px){
+                            height: 4em;
+                            width: 4em;
+                        }
+                        // end of nav avi on small screens
+                        height: 5em;
+                        width: 5em;
+                        border-radius: 50%;
+                        overflow: hidden;
+                        position: absolute;
+                        top: 1em;
+                        left: 1em;
+                        cursor: pointer;
+
+                        img {
+                            width: 100%;
+                            height: 100%;
+                            object-fit: cover;
+                            transition: .5s;
+                            /* pointer-events: none; */
+                        }
+                    }
+                    // end of nav avi < 768px
+
+                }
+                // mobile screens style
+                ul {
+                    list-style: none;
+                    position: absolute;
+                    background: rgb(31, 30, 30);
+                    width: 100vw;
+                    height: 100vh;
+                    left: 100%;
+                    top: 0;
+                    display: flex;
+                    flex-direction: column;
+                    justify-content: center;
+                    align-items: right;
+                    z-index: 1;
+                    overflow-x: hidden;
+                    transition: 0.5s ease left;
+                    // display nav list on toggle 
+                    &.active {
+                        left: 20%;
+                        background-color: #29323c;
+                    }
+                }
+                // end of mobile screens style
                 // desktop nav-list style
                 @media (min-width: 1024px){
                     ul {
@@ -81,12 +138,14 @@ body {
                             box-shadow: none;
                         }
                     }
-
+                    // remove hamburger from desktop view
                     .hamburger {
                         display: none;
                     }
+                    // end of remove hamburger from desktop view
+
                 }
-                // desktop nav-list style
+                // end of desktop nav-list style
             }
         }
     }
