--- a/style2.scss
+++ b/style2.scss
@@ -77,13 +77,17 @@ body {
                             transition: .5s;
                             /* pointer-events: none; */
                         }
+
+                        &:active {
+                            transition: .4s;
+                            transform: scale(.7);
+                        }
                     }
                     // end of nav avi < 768px
 
                 }
                 // mobile screens style
                 ul {
-                    list-style: none;
                     position: absolute;
                     background: rgb(31, 30, 30);
                     width: 100vw;
@@ -97,6 +101,35 @@ body {
                     z-index: 1;
                     overflow-x: hidden;
                     transition: 0.5s ease left;
+
+                    li {
+                        list-style: none;
+
+                        a {
+                            font-size: 1em;
+                            font-weight: 600;
+                            letter-spacing: .15em;
+                            text-decoration: none;
+                            color: #fff;
+                            text-transform: uppercase;
+                            padding: 20px;
+                            display: block;
+                            text-align: left;
+                            font-family: 'Gruppo', cursive;
+                            transition: .2s ease-in-out;
+
+                            i {
+                                margin: 0 auto;
+                                margin-right: .5em;
+                                padding: .5em;
+                                text-align: left;
+                                color: #fffa;
+                                border-radius: 10px;
+                                box-shadow: inset 2px 2px 3px #ddda,
+                                            inset -2px -2px 3px #000a;
+                            }
+                        }
+                    }
                     // display nav list on toggle 
                     &.active {
                         left: 20%;
@@ -153,6 +186,62 @@ body {
 // end of header
 
 // hero section
+#home {
+    background-color: #29323c;
+    position: relative;
+    z-index: 1;
+    overflow: hidden;
+
+    .hero {
+        // animated h1 
+        #hero-h1 {
+            margin: 1em auto;
+            background: transparent;
+            padding: .5em;
+            border-radius: 5px;
+
+            h1 {
+                margin-bottom: .2em;
+                display: block;
+                width: fit-content;
+                color: #eee;
+                font-family: 'Philosopher', sans-serif;
+
+                span {
+                    display: inline-block;
+                    color: #fff;
+                    text-align: left;
+                    font-size: 1.5em;
+                    text-shadow: 0 0 5px #000, 0 0 10px #dc143c;
+                    line-height: 1.3;
+                    animation: hero-span 6s ease-in-out;
+                    animation-delay: calc(1s + .5s * var(--s));
+                    transition: all 3s;
+                    /* hero h1 keyframes */
+                    @keyframes hero-span {
+                        5% {
+                            opacity: 1;
+                        }
+
+                        10% {
+                            opacity: 1;
+                            color: #dc143c8c;
+                            transform: translateX(3px);
+                            text-shadow: 0 0 1px #fff;
+                        }
+
+                        100% {
+                            opacity: 1;
+                        }
+                    }
+                    /* hero h1 keyframes */
+                }
+            }
+        }
+        // end of animated h1 
+        
+    }
+}
 // end of hero section
 
 // skills
