--- a/style2.scss
+++ b/style2.scss
@@ -118,6 +118,8 @@ body {
                             font-family: 'Gruppo', cursive;
                             transition: .2s ease-in-out;
 
+                            
+
                             i {
                                 margin: 0 auto;
                                 margin-right: .5em;
@@ -148,7 +150,7 @@ body {
 
                         li {
                             display: inline-block;
-
+                            
                             a {
                                 font-size: .9em;
                                 padding: .3em 1em;
@@ -165,6 +167,18 @@ body {
                                     display: none;
                                 }
                             }
+                            // links and icon hover state
+                            &:hover {
+                                a {
+                                    transition: .3s ease;
+                                    color: skyblue;
+                                }
+                                i {
+                                    transition: .3s ease;
+                                    color: skyblue;
+                                }
+                            }
+                            // links and icon hover state
                         }
                         &.active {
                             background: none;
@@ -236,15 +250,122 @@ body {
                     }
                     /* hero h1 keyframes */
                 }
+                // "aka" span
+                &#aka {
+                    span {
+                        position: relative;
+                        display: inline-block;
+                        animation: aka 5s ease alternate;
+                        animation-delay: 4s;
+                        margin: .5em 0;
+                        color: #fff;
+                        opacity: 0.5;
+                        transform: scale(0.7);
+                    }
+                    @keyframes aka {
+                        50% {
+                            opacity: 1;
+                            transform: scale(1);
+                            color: tomato;
+                        }
+                    }
+                }
+                // end of "aka" span
+
             }
         }
         // end of animated h1 
-        
+        // welcome section button & shadow
+        #cta-header {
+            position: relative;
+            display: inline-block;
+            text-align: center;
+            font-family: 'Gruppo', cursive;
+            padding: .5em 1em;
+            margin: 2em 0;
+            width: 100%;
+            border-radius: 40px;
+            border: none;
+            outline: none;
+            background-color: #8584844b;
+            text-shadow: 2px 2px 2px #000;
+            transition: .3s linear;
+            cursor: pointer;
+            // button shadows
+            &::before,
+            &::after {
+                position: absolute;
+                content: '';
+                top: 0;
+                left: 0;
+                width: 100%;
+                height: 100%;
+                border-radius: 40px;
+                transition: .3s ease;
+            }
+            &::before {
+                box-shadow: inset 4px 4px 5px #ddda,
+                            inset -4px -4px 5px #000a;
+            }
+            &::after {
+                opacity: 0;
+                box-shadow: inset 4px 4px 5px #000a,
+                            inset -4px -4px 5px #ddda;
+            }
+            // button hover, focus and active states
+            &:hover {
+                transform: scale(.98);
+
+                &::before {opacity: 0;}
+                &::after {opacity: 1;}
+            }
+            &:active {
+                transition: .2s;
+                transform: scale(.94);
+            }
+            // end of button hover, focus and active states
+            // end of button shadows
+            // animated button text 
+            span {
+                position: relative;
+                display: inline-block;
+                color: #fff;
+                font-size: 2em;
+                font-weight: 700;
+                animation: animate 3s ease-in-out infinite;
+                animation-delay: calc(5s + .2s * var(--i));
+                /* cta keyframes*/
+                @keyframes animate {
+                    0% {
+                        transform: translateY(0px);
+                    }
+                    20% {
+                        transform: translateY(-5px);
+                        color: #cd143c;
+                        background: linear-gradient(0deg, #ff0000, #dc143c, #ff0000, #000);
+                        -webkit-background-clip: text;
+                        -webkit-text-fill-color: transparent;
+                        text-transform: uppercase;
+                        box-shadow: none;
+                        text-shadow: none;
+                    }
+                    40%,
+                    100% {
+                        transform: translateY(0);
+                    }
+                }
+                /* end of cta keyframes*/
+            }
+            // end of animated button text 
+            }
+        // end of welcome section button & shadow 
     }
 }
 // end of hero section
 
 // skills
+
+// end of skills
 
 // projects 
 
