--- a/css/style2.css
+++ b/css/style2.css
@@ -331,3 +331,178 @@ body {
   40%,
   100% {
     transform: translateY(0); } }
+
+#skills .skills {
+  flex-direction: column;
+  justify-content: flex-start;
+  text-align: center;
+  width: 100vw;
+  margin: 0 auto;
+  padding-bottom: 1em;
+  background-image: url("../img/nadine-shaabana-0xD40qm07X0-unsplash.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  background-attachment: fixed;
+  position: relative; }
+  #skills .skills::after {
+    content: "";
+    position: absolute;
+    left: 0;
+    top: 0;
+    height: 100%;
+    width: 100%;
+    background-color: #000;
+    opacity: 0.4;
+    overflow: auto; }
+  #skills .skills-header {
+    width: 100%;
+    height: auto;
+    background: #fff;
+    z-index: 30; }
+
+#skills .skills-top {
+  width: 90%;
+  padding: .5em .5em 2em .5em;
+  text-align: center;
+  margin: 2em auto;
+  background-image: var(--overlay);
+  background: #48556388;
+  backdrop-filter: blur(5px);
+  border-radius: 10px;
+  border: none;
+  box-shadow: inset 4px 4px 5px #ddda, inset -4px -4px 5px #000a;
+  position: relative;
+  z-index: 30;
+  transition: .2s linear; }
+  @media (min-width: 1024px) {
+    #skills .skills-top {
+      width: 60%; } }
+  #skills .skills-top p {
+    color: #fff;
+    font-size: .9em;
+    background: transparent;
+    overflow: hidden;
+    text-shadow: var(--text-shadow-sm);
+    line-height: 2em; }
+  #skills .skills-top::after {
+    content: '';
+    position: absolute;
+    width: 45px;
+    height: 45px;
+    border: none;
+    top: 100%;
+    left: 50%;
+    margin-left: -24px;
+    margin-top: -24px;
+    transform: rotate(45deg);
+    background-image: linear-gradient(135deg, transparent 48%, #3d4955 0%);
+    transition: .2s;
+    box-shadow: inset -5px -5px 5px #000a, inset 5px 5px 5px #3d495500; }
+  #skills .skills-top:hover::after {
+    box-shadow: inset -5px -5px 5px #ddda, inset 5px 5px 5px #3d495500;
+    transition: .3s linear; }
+
+#skills .dropdown {
+  position: relative;
+  margin: 0 auto;
+  z-index: 4; }
+  #skills .dropdown .dropbtn {
+    color: #eee;
+    padding: .3em 3em;
+    font-size: 1.5em;
+    font-weight: 600;
+    cursor: pointer;
+    border: none;
+    outline: none;
+    border-radius: 10px;
+    background: linear-gradient(0deg, #dc134c, #333);
+    text-align: center;
+    transition: .3s;
+    font-family: 'Gruppo', cursive;
+    position: relative;
+    overflow: hidden; }
+    #skills .dropdown .dropbtn::before, #skills .dropdown .dropbtn::after {
+      position: absolute;
+      content: '';
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      border-radius: 10px;
+      transition: .3s; }
+    #skills .dropdown .dropbtn::before {
+      box-shadow: 5px 10px 5px #000, inset 3px 3px 5px #000a, inset -3px -3px 5px #fffa; }
+    #skills .dropdown .dropbtn::after {
+      opacity: 0;
+      box-shadow: 0px 0px 10px #000a, inset 3px 3px 5px #fffa, inset -3px -3px 5px #000a; }
+    #skills .dropdown .dropbtn:hover::before {
+      opacity: 0; }
+    #skills .dropdown .dropbtn:hover::after {
+      opacity: 1; }
+    #skills .dropdown .dropbtn:active {
+      transform: scale(0.9);
+      transition: .3s; }
+  #skills .dropdown .dropdown-content {
+    display: none;
+    width: 100vw;
+    z-index: 1;
+    justify-content: center;
+    align-items: center;
+    background-image: url("../img/nadine-shaabana-0xD40qm07X0-unsplash.jpg");
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    background-attachment: fixed;
+    position: relative;
+    padding-bottom: 10em; }
+    #skills .dropdown .dropdown-content.show {
+      display: block; }
+    #skills .dropdown .dropdown-content::before {
+      content: "";
+      position: absolute;
+      left: 0;
+      top: 0;
+      height: 100%;
+      width: 100%;
+      background: #000a; }
+    #skills .dropdown .dropdown-content .skills-bottom {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      flex-wrap: wrap;
+      /*items wrapped onto multiple lines*/
+      margin-top: 50px;
+      padding-top: 50px;
+      text-shadow: var(--text-shadow-sm); }
+      #skills .dropdown .dropdown-content .skills-bottom .skills-item {
+        flex-basis: 80%;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        flex-direction: column;
+        padding: .5em;
+        background: transparent;
+        background-size: cover;
+        margin: .5em auto;
+        position: relative;
+        z-index: 1;
+        text-overflow: ellipsis;
+        transition: 0.3s ease-in-out;
+        overflow: hidden;
+        border-radius: 10px;
+        height: auto; }
+        @media (min-width: 768px) {
+          #skills .dropdown .dropdown-content .skills-bottom .skills-item {
+            flex-basis: 45%;
+            margin: 2.5%;
+            height: 300px;
+            pointer-events: none; } }
+        @media (min-width: 1024px) {
+          #skills .dropdown .dropdown-content .skills-bottom .skills-item {
+            flex-basis: 33%;
+            width: 100%;
+            margin: 1.5%;
+            height: 300px;
+            pointer-events: visible;
+            cursor: pointer; } }
