#cta-header font size

--- a/style2.scss
+++ b/style2.scss
@@ -277,6 +277,7 @@ body {
         // end of animated h1 
         // welcome section button & shadow
         #cta-header {
+            font-size: 1.3em;
             position: relative;
             display: inline-block;
             text-align: center;
