--- a/css/style2.css
+++ b/css/style2.css
@@ -268,6 +268,7 @@ body {
     transform: scale(1);
     color: tomato; } }
   #home .hero #cta-header {
+    font-size: 1.3em;
     position: relative;
     display: inline-block;
     text-align: center;
