skils-top p media query font size

--- a/style2.scss
+++ b/style2.scss
@@ -429,6 +429,9 @@ body {
         p {
             color: #fff;
             font-size: .9em;
+            @media (min-width: 768px){
+                font-size: 1em;
+            }
             background: transparent;
             overflow: hidden;
             text-shadow: var(--text-shadow-sm);
