--- a/css/style2.css
+++ b/css/style2.css
@@ -386,6 +386,9 @@ body {
     overflow: hidden;
     text-shadow: var(--text-shadow-sm);
     line-height: 2em; }
+    @media (min-width: 768px) {
+      #skills .skills-top p {
+        font-size: 1em; } }
   #skills .skills-top::after {
     content: '';
     position: absolute;
