--- a/css/style2.css
+++ b/css/style2.css
@@ -128,6 +128,29 @@
   #header .hamburger:active {
     transform: scale(0.6);
     transition: .3s; }
+  #header .hamburger .bar {
+    height: 2px;
+    width: 30px;
+    position: relative;
+    background-color: #f4f4f4;
+    z-index: -1; }
+    #header .hamburger .bar::before, #header .hamburger .bar::after {
+      content: "";
+      position: absolute;
+      height: 100%;
+      width: 100%;
+      left: 0;
+      background-color: #fff;
+      transition: 0.3s ease;
+      transition-property: top, bottom; }
+    #header .hamburger .bar::before {
+      bottom: 8px; }
+    #header .hamburger .bar::after {
+      top: 8px; }
+  #header .hamburger:active.bars::before {
+    bottom: 0; }
+  #header .hamburger:active.bars::after {
+    top: 0; }
 
 body {
   overflow-x: hidden; }
